# Roboracer-Sim-Challenge-ICRA2026

./: README.md
src/finals/custom_codes_cpp/: CMakeLists.txt  package.xml
src/finals/custom_codes_cpp/include/custom_codes_cpp/: racer_node.hpp
src/finals/custom_codes_cpp/launch/: racer_cpp.launch.py
src/finals/custom_codes_cpp/src/: main.cpp  racer_node.cpp
src/qualifications/custom_codes/: package.xml  parameter_importance.csv  race_telemetry_emergency_save.csv  race_telemetry_exhaustive.csv  setup.cfg  setup.py
src/qualifications/custom_codes/custom_codes/: racer_node.py  racer_tuner.py
src/qualifications/custom_codes/launch/: racer.launch.py
